[project]
name = "lakeground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt>=1.3.0",
    "duckdb>=1.1.2",
    "enlighten>=1.12.4",
    "ipykernel>=6.29.5",
    "streamlit>=1.39.0",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]
